--- a/install.plist
+++ b/install.plist
@@ -11,15 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.3.192/krtct.ipa</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>http://www.baidu.com/applogo.png</string>
+					<string>http://192.168.3.792/krtct.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +19,15 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://www.baidu.com/applogo.png</string>
+					<string>http://xxxxxxxxxxxxxxxxxx.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>needs-shine</key>
+					<true/>
+					<key>url</key>
+					<string>http://xxxxxxxxxxxxxxxxxx.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -38,10 +38,8 @@
 				<string>1.0.1</string>
 				<key>kind</key>
 				<string>software</string>
-				<key>subtitle</key>
-				<string>_zone的免安装应用</string>
 				<key>title</key>
-				<string>_zone的免安装应用</string>
+				<string>krtct App download</string>
 			</dict>
 		</dict>
 	</array>
