--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.3.792/krtct.ipa</string>
+					<string>http://221.204.177.90:8841/TCGL/static/js/Gateway/js/krtct.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
