--- a/install.plist
+++ b/install.plist
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>krtct App download</string>
+				<string>e 体彩</string>
 			</dict>
 		</dict>
 	</array>
