--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://221.204.177.90:8841/TCGL/static/js/Gateway/js/krtct.ipa</string>
+					<string>http://221.204.177.90:8841/TCGL/static/js/Gateway/js/etc.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.kr.TCKnowAll</string>
+				<string>com.EJOB.ETC</string>
 				<key>bundle-version</key>
 				<string>1.0.1</string>
 				<key>kind</key>
