--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://221.204.177.90:8841/TCGL/static/js/appDownload/NENT_OA.ipa</string>
+					<string>http://localhost/data/upload/appdownload/chenggong.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,13 +33,13 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.kr.TCKnowAll</string>
+				<string>com.oind.openly</string>
 				<key>bundle-version</key>
-				<string>1.0.3</string>
+				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>体彩通</string>
+				<string>诚工</string>
 			</dict>
 		</dict>
 	</array>
