--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://localhost/data/upload/appdownload/chenggong.ipa</string>
+					<string>http://www.deerjia.com/data/upload/appdownload/chenggong.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
